ios z-index bug

--- a/public/less/lanyon.less
+++ b/public/less/lanyon.less
@@ -325,8 +325,11 @@ main {
     position: relative;
     padding: 0 4%;
     margin: 0 auto;
-    //max-width: 1200px;
     min-height: 100%;
+    -webkit-transform:translateZ(1px);
+    -moz-transform:translateZ(1px);
+    -o-transform:translateZ(1px);
+    transform:translateZ(1px);
     
     @media @phone {
         padding: 0 1.5%;
